testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport2.errors.txt
lateBoundAssignmentDeclarationSupport2.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport2.js(6,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport2.js(7,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
usage.js(2,11): error TS7053: Element implicitly has an 'any' type because expression of type '"my-fake-sym"' can't be used to index type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
  Property 'my-fake-sym' does not exist on type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
usage.js(3,11): error TS7053: Element implicitly has an 'any' type because expression of type 'unique symbol' can't be used to index type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
  Property '[_sym]' does not exist on type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.


==== usage.js (2 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport2.js");
    const y = x["my-fake-sym"];
              ~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"my-fake-sym"' can't be used to index type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
!!! error TS7053:   Property 'my-fake-sym' does not exist on type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
    const z = x[x.S];
              ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'unique symbol' can't be used to index type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
!!! error TS7053:   Property '[_sym]' does not exist on type 'typeof import("lateBoundAssignmentDeclarationSupport2")'.
    
==== lateBoundAssignmentDeclarationSupport2.js (3 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    module.exports[_sym] = "ok";
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports[_str] = "ok";
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports.S = _sym;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.